--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,12 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jeroendesloovere/vcard": "^1.7",
         "laravel/framework": "^8.12",
+        "laravel/horizon": "^5.7",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
+        "sentry/sentry-laravel": "^2.14",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.0"
     },
@@ -26,6 +29,7 @@
         "fakerphp/faker": "^1.9.1",
         "krlove/eloquent-model-generator": "^1.3",
         "laravel/sail": "^1.0.1",
+        "laravel/telescope": "^4.9",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
@@ -33,7 +37,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
